# dungeons-and-lights

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: lighting_shader.frag
src/: main.cpp
src/engine/CollisionManager/: CollisionManager.cpp
src/engine/PhysicsComponent/: PhysicsComponent.cpp
src/engine/Renderer/: Renderer.cpp  Renderer.h
src/engine/TileMap/: TileMap.cpp  TileMap.h
src/game/Entity/: Entity.cpp
src/game/Entity/Character/Player/: Player.cpp  Player.h
